[package]
name = "tobaru"
version = "0.9.3"
edition = "2021"
license = "MIT"
description = "Port forwarding CLI utility written in Rust with allowlists, TLS SNI and ALPN routing, HTTP forwarding, load balancing, IP-to-destination mapping, and iptables support."
homepage = "https://github.com/cfal/tobaru/"
repository = "https://github.com/cfal/tobaru/"
readme = "README.md"
keywords = ["tunnel", "proxy", "forward", "port", "http"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
async-trait = "*"
aws-lc-rs = { version = "*", default-features = false }
env_logger = "*"
futures = "*"
ipnet = "*"
log = { version = "*", features = ["release_max_level_info"] }
parking_lot = "*"
percent-encoding = "*"
rustls = { version = "*", default-features = false, features = ["aws_lc_rs", "std", "logging", "tls12"] }
rustls-pemfile = { version = "*" }
serde = { version = "*", features = ["derive", "std"] }
serde_json = "*"
serde_yaml = "*"
tokio = { version = "*", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-rustls = { version = "*", default-features = false, features = ["logging", "tls12", "aws_lc_rs"] }
ip_network_table-deps-treebitmap = "*"
url = "*"
webpki-roots = { version = "*" }
notify = "*"
radix_trie = { version = "*", features = ["serde"] }
rand = "*"
memchr = "*"
mime_guess = "*"
socket2 = "*"

[profile.release]
opt-level = 3
lto = "fat"
strip = true
