[package]
name = "tobaru"
version = "0.9.4"
edition = "2021"
license = "MIT"
description = "Port forwarding CLI utility written in Rust with allowlists, TLS SNI and ALPN routing, HTTP forwarding, load balancing, IP-to-destination mapping, and iptables support."
homepage = "https://github.com/cfal/tobaru/"
repository = "https://github.com/cfal/tobaru/"
readme = "README.md"
keywords = ["tunnel", "proxy", "forward", "port", "http"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
async-trait = "0.1.89"
aws-lc-rs = { version = "1.15.4", default-features = false }
env_logger = "0.11.9"
futures = "0.3.31"
ipnet = "2.11.0"
log = { version = "0.4.29", features = ["release_max_level_info"] }
parking_lot = "0.12.5"
percent-encoding = "2.3.2"
rustls = { version = "0.23.36", default-features = false, features = ["aws_lc_rs", "std", "logging", "tls12"] }
rustls-pemfile = { version = "2.2.0" }
serde = { version = "1.0.228", features = ["derive", "std"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.49.0", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["logging", "tls12", "aws_lc_rs"] }
ip_network_table-deps-treebitmap = "0.5.0"
url = "2.5.8"
webpki-roots = { version = "1.0.6" }
notify = "8.2.0"
radix_trie = { version = "0.3.0", features = ["serde"] }
rand = "0.10.0"
memchr = "2.8.0"
mime_guess = "2.0.5"
socket2 = "0.6.2"

[profile.release]
opt-level = 3
lto = "fat"
strip = true
